--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,10 @@ html, body {
 
 nav.navbar { 
   display: flex;
+  justify-content: space-around;
+  align-items: center;
   padding: 0px 20px;
-  background: #686de0; 
+  background: #bdb5b5; 
 }
 
 button.navbar-button {
@@ -23,4 +25,31 @@ button.navbar-button {
 #home-btn {
   color: white;
   text-decoration: none;
+}
+
+div.search-main-div {
+  position: relative; 
+  width: 100vw; 
+  height: 100vh
+}
+
+div.search-div-zIndex {
+  position: absolute; 
+  z-index: 100;
+  background-color: transparent
+}
+
+div.search-div-align-center {
+  display: flex; 
+  align-items: center; 
+  flex-direction: column;
+}
+
+div.search-div-overflow {
+  margin-top: 48vh; 
+  overflow-y: hidden;
+  overflow-x: scroll; 
+  width: 100vw;
+  white-space: nowrap;
+  height: 200px;
 }
